base/scotchbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scotchbase-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:505502261492:certificate/e7de5fa0-df6d-47de-8cee-14e56eaec776
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scotchbase-service
            port:
              number: 80
